      MYMETA.json
      pm_to_blib
      .spvm_build
      t/.spvm_build
      core.*
      core
      SPVM-*
      *.bak
      *.BAK
      *.tmp
      
      [After]
      blib/*
      Makefile
      Makefile.old
      MYMETA.yml
      MYMETA.json
      pm_to_blib
      .spvm_build
      t/.spvm_build
      core.*
      core
      SPVM-*
      *.bak
      *.BAK
      *.tmp
      *.o
      *.bs

0.9621 2022-07-13
  [New Features]
    * Add SPVM::Builder::LinkInfo create_link_command instance method.
    * Add SPVM::Builder::LinkInfo output_type field method.
    * Add SPVM::Builder::LinkInfo ld_optimize field method.
    * Add SPVM::Builder::LinkInfo dynamic_lib_ldflags field method.
    * Add SPVM::Builder::LinkInfo create_merged_ldflags method.
    * Add SPVM::Builder::CompileInfo class.
    * Add compile_info to SPVM::Builder::ObjectFileInfo.
    * Add before_compile to SPVM::Builder::Config.
    * Add global_before_compile to SPVM::Builder::Config::Exe.
  [Changes]
    * Improve MANIFES.SKIP that is generated by spvmdit.
      [Before]
      ^blib/
      ^Makefile\$
      ^Makefile\.old\$
      ^MYMETA.yml\$
      ^MYMETA.json\$
      ^pm_to_blib\$
      ^\.spvm_build/
      ^t/\.spvm_build/
      ^SPVM-
      ^core\.
      ^core\$
      \.bak\$
      \.tmp\$
      \.BAK\$
      ^\.git/
      
      [After]
      (^|\/)blib/
      (^|\/)Makefile$
      (^|\/)Makefile.old$
      (^|\/)MYMETA.yml$
      (^|\/)MYMETA.json$
      (^|\/)pm_to_blib$
      (^|\/).spvm_build/
      (^|\/)t/.spvm_build/
      (^|\/)SPVM-
      (^|\/)core\.
      (^|\/)core$
      (^|\/)\.git/
      \.bak$
      \.tmp$
      \.BAK$
      \.o$
      \.bs$
  [Imcompative Changes]
    * (This is undocumented feature)The return value of SPVM::LinkInfo to_string
      is changed from the output file to the link command.
    * (This feature is not work well from now)Remove non-worked global_cc_each,
      global_ccflags_each, global_optimize_each from SPVM::Builder::CC.