@@ -5,6 +5,25 @@ use Test::More;
 
 use SPVM::Dist;
 
-ok(1);
+# Exception
+{
+  {
+    my $dist = SPVM::Dist->new(
+      class_name => '',
+    );
+    
+    eval { $dist->generate_dist };
+    like($@, qr/The class name must be specified/);
+  }
+
+  {
+    my $dist = SPVM::Dist->new(
+      class_name => 'Foo-Bar',
+    );
+    
+    eval { $dist->generate_dist };
+    like($@, qr/The class name can't contain \"-\"/);
+  }
+}
 
 done_testing;
