@@ -35,6 +35,7 @@
       *.tmp
       *.o
       *.bs
+    * spvmdist checks the class name is specified and doesn't contains "-".
 
 0.9621 2022-07-13
   [New Features]
